JumpScript/tests/baselines/reference/importAndVariableDeclarationConflict4.errors.txt
tests/cases/compiler/importAndVariableDeclarationConflict4.jump(6,1): error TS2440: Import declaration conflicts with local declaration of 'x'.


==== tests/cases/compiler/importAndVariableDeclarationConflict4.jump (1 errors) ====
    module m {
      export var m = '';
    }
    
    var x = '';
    import x = m.m;
    ~~~~~~~~~~~~~~~
!!! error TS2440: Import declaration conflicts with local declaration of 'x'.
    